--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     
     #game-container {
         display: flex;
-        justify-content: space-around;
+        justify-content: center;
         align-items: center;
-        width: 80%;
+        width: 70%;
     }
     #game-board {
         display: grid;
@@ -36,8 +36,8 @@
         border-radius: 20px;
     }
     .card {
-        width: 100px;
-        height: 100px;
+        width: 60px;
+        height: 60px;
         background-color: #555;
         display: flex;
         justify-content: center;
